# nightd

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  README.md  compose.yml  docker-compose.mlflow.yml  main.py  mise.toml  opencode.json  package.json  pyproject.toml  zensical.toml
.agents/skills/agentclientprotocol/: SKILL.md
.agents/skills/agentclientprotocol/references/: documentatio.md  rust-sdk-v1.md
.agents/skills/architecture/: SKILL.md
.agents/skills/architecture/references/: testing.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  dependabot-prs.yml  docs.yml
.sqlx/: query-0352f3f7e904146453c748e0d02c960cfcc50c3bf98e94f6057a4e0c626d2ed5.json  query-10d0049260634107433a16b91147ec6ba14e8eb3c6f5fb2889221f5603f1b64c.json  query-1391017d489cc3324fc9ff74a1608322ea0dc8b8d775f1ad3297363874add22d.json  query-46e887f077ece69f3ec94c4ece5420e6515edfd3feef9ee6003d4f58a20829f2.json  query-5070ace61806fba581a14708eb956429d7f920fbecf71b5e63b6e4532a5976f6.json  query-8705f732d697fa5e0cd4d341a4dfd43f4e94866a484d105f6c96875b6b407609.json  query-9058d503092d9edca764559fd539c1bf0fd8ddbea2d7846c149907e32ce60d4f.json  query-c14dee48b0a41320c23bef00910a09ed3bda32625e3ffd673afd1615da30e10a.json  query-ce4f3123863b923dc729b72a503cc9ba6781d137d156d9a8660c7a2416587453.json  query-f28e53e194712a08536fa7577a703e40d93ccfce05168ca3e25e971e02a10c90.json
crates/agent/: Cargo.toml
crates/agent/src/: acp.rs  config.rs  db.rs  error.rs  lib.rs  models.rs  types.rs
crates/agent/src/api/: mod.rs
crates/agent/src/db/: mod.rs
crates/agent/src/db/migrations/: 20250120000000_create_sessions_table.sql  mod.rs
crates/agent/src/models/: mod.rs
crates/agent/src/scheduler/: mod.rs
crates/agent/src/session/: handle.rs  mod.rs
crates/agent/tests/: integration_basic.rs
crates/agent/tests/common/: fake_agent.rs  mod.rs
crates/dev-environment/: Cargo.toml
crates/dev-environment/src/: error.rs  lib.rs
crates/executor/: Cargo.toml
crates/executor/src/: error.rs  lib.rs
crates/nightctl/: Cargo.toml
crates/nightctl/src/: cli.rs  main.rs
crates/nightctl/tests/: integration_tests.rs
crates/nightd/: Cargo.toml
crates/nightd/migrations/: 20250307000001_create_tasks_table.down.sql
crates/nightd/src/: acp.rs  api.rs  app.rs  cli.rs  db.rs  lib.rs  main.rs  models.rs  server.rs  worker.rs
crates/nightd/src/api/: mod.rs  status.rs  task.rs
crates/nightd/src/models/: mod.rs  task.rs
crates/nightd/tests/: integration_tests.rs  status_tests.rs  tasks_tests.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: error.rs  lib.rs
crates/workspace/tests/: integration_tests.rs
crates/workspace/tests/common/: mod.rs
docs/: CNAME  index.md
docs/adr/: 001-acp-native-architecture.md  index.md
docs/blog/: hello-world.md  index.md
migrations/: 20250307000001_create_tasks_table.sql
page/overrides/partials/integrations/analytics/: plausible.html
src/nightd/: api.py  cli.py  config.py  database.py  task_runner.py
src/nightd/agents/: __init__.py  base.py  coder.py  orchestrator.py  reviewer.py  spec_writer.py
src/nightd/models/: task.py
supabase/: config.toml
