[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
description = "A scheduler for autonomous coding agents"
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "migrate"] }
agent-client-protocol = "0.9"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
