[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "FSL-1.1-ALv2"
repository = "https://github.com/nightd-ai/nightd"

[workspace.dependencies]
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.51.1", features = ["full"] }
