[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sacp = "0.1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "uuid", "time", "migrate"] }
tokio.workspace = true
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2"
tracing = "0.1"
dashmap = "6.1.0"
tokio-util = { version = "0.7.18", features = ["compat"] }
serde_json = "1.0.149"
futures = "0.3.32"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
anyhow = "1"
tracing-subscriber = "0.3"
