[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sacp = "11.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "uuid", "time", "migrate"] }
tokio.workspace = true
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"
