[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agent-client-protocol = "0.11.1"
tokio.workspace = true
tokio-util = "0.7.18"
sqlx.workspace = true
uuid = { version = "1.23.1", features = ["serde", "v7"] }
