[package]
name = "executor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agent = { path = "../agent" }
workspace = { path = "../workspace" }
dev-environment = { path = "../dev-environment" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "uuid", "time"] }
tokio.workspace = true
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "2"
