[package]
name = "nightctl"
version.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "nightctl"
path = "src/main.rs"
