[package]
name = "nightctl"
version.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "nightctl"
path = "src/main.rs"

[dev-dependencies]
nightd = { path = "../nightd" }
sqlx = { workspace = true }
axum = { workspace = true }
