[package]
name = "nightctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for the nightd daemon"

[dependencies]
clap.workspace = true
reqwest = { version = "0.13.3", features = ["json"] }
serde_json = "1.0.149"
tokio.workspace = true
