[package]
name = "nightd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A daemon to schedule autonomous coding agents"

[dependencies]
agent = { path = "../agent" }
executor = { path = "../executor" }
axum = "0.8.8"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "uuid", "time", "migrate"] }
clap.workspace = true
serde = { version = "1.0", features = ["derive"] }
tokio.workspace = true
