[package]
name = "nightd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A daemon to schedule autonomous coding agents"

[dependencies]
axum = "0.8.8"
sqlx = { workspace = true, features = ["migrate"] }
clap.workspace = true
serde = { version = "1.0", features = ["derive"] }
tokio.workspace = true
agent = { path = "../agent" }
