[package]
name = "workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["process", "fs"] }
thiserror = "2"
dirs = "6"
petname = { version = "3", default-features = false, features = ["default-rng", "default-words"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
